--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
                 <a class="foot-item" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" target="_blank"><span class="octicon octicon-rss"></span></a>
                 <a class="foot-item" href="#"><span class="octicon octicon-link-external"></span></a>
                 &nbsp;
-                <a href="#"><span class="word-keep">&copy; RainyAlley</span></a>
+                &copy; RainyAlley</span>
         </div>
     </footer>
